fix overflow issue

--- a/src/styles/directions.scss
+++ b/src/styles/directions.scss
@@ -7,7 +7,7 @@
     background-color: #fbf5f4;
     padding: 14px 14px 0 20px;
     position: relative;
-    overflow-x: hidden;
+    overflow: hidden;
     .main-header {
         margin-bottom: 115px;
     }
