--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,8 +16,8 @@
     padding: 0;
     display: flex;
     flex-direction: column;
-    min-height: 812px;
-    height: 100vh;
+    min-height: calc(812px - 14px);
+    height: calc(100vh - 14px);
     justify-content: space-between;
 }
 picture {
